LonelyInteger + List.of() usage