@@ -3,7 +3,6 @@ package com.emregecer.hackerrank.interview.basic;
 import com.emregecer.IOTest;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static com.emregecer.hackerrank.interview.basic.MiniMaxSum.miniMaxSum;
@@ -13,7 +12,7 @@ public class MiniMaxSumTest extends IOTest {
 
     @Test
     public void case1() {
-        List<Integer> integers = Arrays.asList(1, 2, 3, 4, 5);
+        List<Integer> integers = List.of(1, 2, 3, 4, 5);
         miniMaxSum(integers);
 
         assertEquals(
@@ -24,7 +23,7 @@ public class MiniMaxSumTest extends IOTest {
 
     @Test
     public void case2() {
-        List<Integer> integers = Arrays.asList(7, 69, 2, 221, 8974);
+        List<Integer> integers = List.of(7, 69, 2, 221, 8974);
         miniMaxSum(integers);
 
         assertEquals(
@@ -35,7 +34,7 @@ public class MiniMaxSumTest extends IOTest {
 
     @Test
     public void case3() {
-        List<Integer> integers = Arrays.asList(256741038, 623958417, 467905213, 714532089, 938071625);
+        List<Integer> integers = List.of(256741038, 623958417, 467905213, 714532089, 938071625);
         miniMaxSum(integers);
 
         assertEquals(
@@ -46,7 +45,7 @@ public class MiniMaxSumTest extends IOTest {
 
     @Test
     public void case4() {
-        List<Integer> integers = Arrays.asList(5, 5, 5, 5, 5);
+        List<Integer> integers = List.of(5, 5, 5, 5, 5);
         miniMaxSum(integers);
 
         assertEquals(
