@@ -3,7 +3,6 @@ package com.emregecer.hackerrank.interview.basic;
 import com.emregecer.IOTest;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -12,7 +11,7 @@ public class PlusMinusTest extends IOTest {
 
     @Test
     public void case1() {
-        List<Integer> integers = Arrays.asList(-4, 3, -9, 0, 4, 1);
+        List<Integer> integers = List.of(-4, 3, -9, 0, 4, 1);
         PlusMinus.plusMinus(integers);
 
         assertEquals(
@@ -23,11 +22,11 @@ public class PlusMinusTest extends IOTest {
 
     @Test
     public void case2() {
-        List<Integer> integers = Arrays.asList(1, 2, 3, -1, -2, -3, 0, 0);
+        List<Integer> integers = List.of(1, 2, 3, -1, -2, -3, 0, 0);
         PlusMinus.plusMinus(integers);
 
         assertEquals(
-                String.join(System.getProperty("line.separator"),"0.375000", "0.375000", "0.250000"),
+                String.join(System.getProperty("line.separator"), "0.375000", "0.375000", "0.250000"),
                 outputStreamCaptor.toString().trim()
         );
     }
